# daycache

./: .env.example  .gitignore  .pre-commit-config.yaml  FEATURES.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  todo  tsconfig.json
apps/api/: alembic.ini  export_openapi.py  generate_docs.py  openapi.json  pyproject.toml  seed_db.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/v1/: ai.py  auth.py  collections.py  health.py  journal.py  media.py  personas.py  router.py  search.py  settings.py  tags.py  users.py
apps/api/app/core/: config.py  constants.py  lifespan.py  logging.py  security.py
apps/api/app/db/: base.py  engine.py  enums.py  session.py
apps/api/app/db/models/: __init__.py  ai.py  auth.py  collection.py  journal.py  media.py  mood.py  organization.py  recall.py  reflect.py  (+2 more)
apps/api/app/exceptions/: __init__.py  base.py  handlers.py
apps/api/app/middleware/: logging.py
apps/api/app/services/: __init__.py
apps/api/app/storage/: base.py  factory.py  local.py  s3.py
apps/api/app/workers/: __init__.py  arq_settings.py  embedding.py  media.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 20260702_0634_66a2a2a2e1b4_init_schema.py  20260702_1135_5dfd628c3a90_add_user_id_to_embeddings.py  20260702_1351_7c8cae8aead6_rename_device_and_session_fields_and_.py  20260702_1732_52903c9f9328_add_media_upload_status_and_split_.py  20260702_2232_8254be691648_replace_users_avatar_key_with_avatar_media_id_fk.py  20260703_0907_9540dac86d69_add_version_column_to_journal_entries.py  20260703_0947_8dd287ab96e6_drop_is_draft_column_from_journal_.py  20260703_1139_6ed92ae59d18_seed_predefined_moods.py  20260703_1713_70c94d9cd39c_add_embedding_status_to_journal_entries.py  20260703_1807_0411c9ce868b_alter_embedding_column_type_to_.py  20260703_1957_ed989bc239da_add_fts_search_vector_trigger_to_.py  20260704_0435_bcbce1c99889_add_content_hash_to_entries_and_.py  20260704_0759_72e7e69c3e21_add_recall_tables.py  20260704_1327_28cf671fef75_add_reflect_tables.py  20260704_1644_d1557a287b52_add_ai_persona_name.py  20260704_1652_c87edd81a7de_add_cache_persona.py
apps/api/tests/: .gitkeep  __init__.py  conftest.py  test_ai_summary.py  test_auth.py  test_collections.py  test_embedding_pipeline.py  test_health.py  test_journal.py  test_journal_media.py  test_media.py  test_media_storage.py  test_media_worker.py  test_personas.py  test_recall.py  test_reflect.py  test_search.py  test_tags.py
(+164 files in other folders)
