[project]
name = "daycache-api"
version = "0.1.0"
description = "DayCache FastAPI Application"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "alembic>=1.18",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "passlib[bcrypt]>=1.7",
    "pgvector>=0.2.0",
    "argon2-cffi>=23.1.0",
    "arq>=0.26",
    "Pillow>=11.0",
    "blurhash-python>=1.2",
    "aioboto3>=13.0",
    "google-genai>=2.10.0",
    "openai>=2.44.0",
    "ollama>=0.6.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pyright>=1.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "anyio>=4.7",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # Depends() in argument defaults is the canonical FastAPI pattern
    "UP046", # Generic[T] style preferred for compatibility; PEP 695 syntax is py3.12+ only
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Pyright — static type checker
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "-ra",
]
